{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 171,
  "lineage": "bd38ce75-2800-67f6-1ecd-2e40ac05282d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d044b443042cde3",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-09d044b443042cde3",
            "domain": "vpc",
            "id": "eipalloc-09d044b443042cde3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-98-145.compute-1.amazonaws.com",
            "public_ip": "52.200.98.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arc-demo-vpc-eip-1"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d497f1b4c127cc8",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-00d497f1b4c127cc8",
            "domain": "vpc",
            "id": "eipalloc-00d497f1b4c127cc8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-162-164.compute-1.amazonaws.com",
            "public_ip": "52.7.162.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arc-demo-vpc-eip-2"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:internet-gateway/igw-03b614e1a1d683a7c",
            "id": "igw-03b614e1a1d683a7c",
            "owner_id": "804295906245",
            "tags": {
              "Name": "arc-demo-vpc-igw"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-igw"
            },
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arc_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d044b443042cde3",
            "association_id": "eipassoc-066b04a0e6a9bd728",
            "connectivity_type": "public",
            "id": "nat-00890ba19dea58c4c",
            "network_interface_id": "eni-00f78ccc2b1ac96c6",
            "private_ip": "192.168.1.231",
            "public_ip": "52.200.98.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e3a0444d8352957",
            "tags": {
              "AutoTag_CreateTime": "2024-05-09T07:24:54Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-nat-gateway-1"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-05-09T07:24:54Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.arc_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d497f1b4c127cc8",
            "association_id": "eipassoc-0fdf213b98f136f7b",
            "connectivity_type": "public",
            "id": "nat-05e03bcaaae5f1d05",
            "network_interface_id": "eni-02ec0514a876ef3cc",
            "private_ip": "192.168.2.84",
            "public_ip": "52.7.162.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0749f9a37912908ab",
            "tags": {
              "AutoTag_CreateTime": "2024-05-09T07:24:54Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-nat-gateway-2"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-05-09T07:24:54Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.arc_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0ba53fb0ebc75601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00890ba19dea58c4c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0ba53fb0ebc7560",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arc_eip",
            "aws_nat_gateway.arc_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05940ecc4c0e253e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e03bcaaae5f1d05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05940ecc4c0e253e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arc_eip",
            "aws_nat_gateway.arc_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b614e1a1d683a7c",
            "id": "r-rtb-021fcc9e684bbf0931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021fcc9e684bbf093",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arc_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0d0ba53fb0ebc7560",
            "id": "rtb-0d0ba53fb0ebc7560",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "arc-demo-vpc-private-route-table-1"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-05940ecc4c0e253e4",
            "id": "rtb-05940ecc4c0e253e4",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "arc-demo-vpc-private-route-table-2"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-021fcc9e684bbf093",
            "id": "rtb-021fcc9e684bbf093",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "arc-demo-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79da353e3cc3502",
            "route_table_id": "rtb-0d0ba53fb0ebc7560",
            "subnet_id": "subnet-09a8dabed817d7d08"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def2031fd80e0c11",
            "route_table_id": "rtb-05940ecc4c0e253e4",
            "subnet_id": "subnet-024c46decdd5e3a1f"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3a6837bc4b070d",
            "route_table_id": "rtb-021fcc9e684bbf093",
            "subnet_id": "subnet-08e3a0444d8352957"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7b9407b8b879875",
            "route_table_id": "rtb-021fcc9e684bbf093",
            "subnet_id": "subnet-0749f9a37912908ab"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-09a8dabed817d7d08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a8dabed817d7d08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arc-demo-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-024c46decdd5e3a1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024c46decdd5e3a1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arc-demo-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "arc-demo-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-08e3a0444d8352957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e3a0444d8352957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2024-05-09T07:24:41Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-public-subnet-1"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-05-09T07:24:41Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0749f9a37912908ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0749f9a37912908ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2024-05-09T07:24:41Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-public-subnet-2"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-05-09T07:24:41Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0c29893ac4c006478"
          },
          "dependencies": [
            "aws_vpc.arc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-0c29893ac4c006478",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0596df842c59d4d45",
            "default_route_table_id": "rtb-0d0c73d5b1e0ef7cf",
            "default_security_group_id": "sg-02d706aafeb8702ef",
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c29893ac4c006478",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0c73d5b1e0ef7cf",
            "owner_id": "804295906245",
            "tags": {
              "AutoTag_CreateTime": "2024-05-09T07:24:26Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-05-09T07:24:26Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/aashish-arc-poc",
              "AutoTag_UserName": "aashish-arc-poc",
              "Name": "arc-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}